@@ -9,7 +9,8 @@ org.gradle.parallel=true
 org.gradle.daemon=true
 
 # See https://stackoverflow.com/questions/56075455/expiring-daemon-because-jvm-heap-space-is-exhausted
-org.gradle.jvmargs=-Xmx4g -XX:MaxPermSize=2048m -Dkotlin.daemon.jvm.options\="-Xmx2048M" -XX:ReservedCodeCacheSize=512m
+# we must make sure that the total size is <7G, as that's the RAM size of VM on the build pipeline.
+org.gradle.jvmargs=-Xmx2048m -XX:MaxPermSize=512m -XX:+HeapDumpOnOutOfMemoryError
 
 # This the TSL versionName...
 versionName=1.5.9
