@@ -1,5 +1,6 @@
 vNext
 ----------
+- [PATCH] Make changes for jetpack datastore broker support (#1986)
 - [PATCH] Getting rid of account manager strategy in MSAL/OneAuth (#1988)
 - [MINOR] Add JWT Claims to MicrosoftStsTokenRequest to support PRT v3 (#1969)
 
